# DrumGenTemplateEditor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
icons/: 512x512.icns
src/: drumgen.rs  gui.rs  main.rs
